<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="16dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/welcome_to_coffee_house"
                android:textColor="#ED5120"
                android:textSize="23sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:autofillHints=""
                android:hint="@string/customer_name"
                android:inputType="text|textCapWords"
                android:minHeight="48dp"
                android:textColorHint="#757575">

            </EditText>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="44dp"
                android:text="@string/quantity"
                android:textColor="#3C2767"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3">

                <Button
                    android:id="@+id/decrement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:onClick="decrement"
                    android:text="@string/decrement"
                    android:textColor="#455A64"
                    android:textSize="24sp"
                    app:backgroundTint="#FAAEA7A7"
                    tools:ignore="TextContrastCheck,TextContrastCheck" />

                <TextView
                    android:id="@+id/coffee_Quantity"
                    android:layout_width="78dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:padding="16dp"
                    android:text="@string/_2"
                    android:textColor="#050505"
                    android:textColorHint="#0C0C0C"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/increment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_weight="1"
                    android:onClick="increment"
                    android:text="@string/increment"
                    android:textColor="#455A64"
                    android:textSize="24sp"
                    app:backgroundTint="#B6ABAB"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/whippedCream_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/whipped_cream"
                android:textColor="#786C6C"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/chocolate_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:text="@string/chocolate"
                android:textColor="#786C6C"
                android:textSize="18sp" />

            <Button
                android:id="@+id/order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="30dp"
                android:onClick="orderNow"
                android:text="@string/order_now"
                android:textColor="#0B0808"
                app:backgroundTint="#319ACD"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.507"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/order_Summary"
                app:layout_constraintVertical_bias="0.234"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>